# TP

.github/workflows/: c-cpp.yml
task-ci/: run.sh
task1/: .run.sh.swp  run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/B/src/: lib.cpp
task2/C/: main.cpp  main.h  main_test.cpp  main_tests.cpp
task3/: CMakeLists.txt
task3/TechProgSimpleLibrary/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/: run.sh
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task5/cmake-with-flask/: CMakeLists.txt  Dockerfile
